--- a/src/main/resources/assets/additionalweapons/lang/en_us.json
+++ b/src/main/resources/assets/additionalweapons/lang/en_us.json
@@ -1,4 +1,5 @@
 {
-  "item.additionalweapons.impact_axe": "Impact Axe",
+  "item.additionalweapons.broad_glaive":"Broad Glaive",
+  "item.additionalweapons.impact_axe":"Impact Axe",
   "item.additionalweapons.rubber_duck":"Rubber Duck"
 }
